feat: add eslint and commitizen

--- a/package.json
+++ b/package.json
@@ -4,10 +4,26 @@
   "description": "一个用于生成通过 issues 功能来写博客的模板的脚手架",
   "main": "index.js",
   "scripts": {
+    "commit": "git-cz",
+    "lint": "eslint --ext .js ./",
+    "fix": "eslint --fix",
+    "release": "node scripts/release.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "issues-blog": "bin/index.js"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -36,5 +52,22 @@
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "semver": "^7.3.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
+    "standard-version": "^9.3.0"
   }
 }
