--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "didyoumean": "^1.2.2",
     "download-git-repo": "^3.0.2",
     "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
     "inquirer": "^8.1.1",
     "is-git-url": "^1.0.0",
     "ora": "^5.4.1",
